hexagon_logic/src/snapshots/hexagon_logic__board__tests__test_move_rook.snap
---
source: hexagon_logic/src/board.rs
expression: options
---
[
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 5,
        },
        destination: Position {
            y: 5,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 6,
        },
        destination: Position {
            y: 5,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 7,
        },
        destination: Position {
            y: 5,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 8,
        },
        destination: Position {
            y: 5,
            x: 9,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 9,
        },
        destination: Position {
            y: 5,
            x: 10,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 5,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 3,
        },
        destination: Position {
            y: 5,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 2,
        },
        destination: Position {
            y: 5,
            x: 1,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 1,
        },
        destination: Position {
            y: 5,
            x: 0,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 5,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 4,
            x: 5,
        },
        destination: Position {
            y: 3,
            x: 6,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 3,
            x: 6,
        },
        destination: Position {
            y: 2,
            x: 7,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 2,
            x: 7,
        },
        destination: Position {
            y: 1,
            x: 8,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 1,
            x: 8,
        },
        destination: Position {
            y: 0,
            x: 9,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 3,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 6,
            x: 3,
        },
        destination: Position {
            y: 7,
            x: 2,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 7,
            x: 2,
        },
        destination: Position {
            y: 8,
            x: 1,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 8,
            x: 1,
        },
        destination: Position {
            y: 9,
            x: 0,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 6,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 6,
            x: 4,
        },
        destination: Position {
            y: 7,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 7,
            x: 4,
        },
        destination: Position {
            y: 8,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 8,
            x: 4,
        },
        destination: Position {
            y: 9,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 9,
            x: 4,
        },
        destination: Position {
            y: 10,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 5,
            x: 4,
        },
        destination: Position {
            y: 4,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 4,
            x: 4,
        },
        destination: Position {
            y: 3,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 3,
            x: 4,
        },
        destination: Position {
            y: 2,
            x: 4,
        },
        action: Move,
    },
    GameMove {
        piece: Piece {
            piece_type: Rook,
            side: Black,
        },
        origin: Position {
            y: 2,
            x: 4,
        },
        destination: Position {
            y: 1,
            x: 4,
        },
        action: Move,
    },
]
